# FPlayerPub

./: build.gradle  netlibrary.rar  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  video_view.xml
fplayer/: build.gradle
fplayer/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mvp/: build.gradle
mvp/src/main/: AndroidManifest.xml
mvp/src/main/res/values/: strings.xml
mvp/template/MVPActivity/: globals.xml.ftl  recipe.xml.ftl  template.xml
netlibrary/: build.gradle
netlibrary/src/main/: AndroidManifest.xml
palyer/: build.gradle
palyer/src/main/: AndroidManifest.xml
palyer/src/main/res/layout/: vvc_media_controller.xml
palyer/src/main/res/values/: colors.xml  strings.xml  styles.xml
shotlamb/: build.gradle
shotlamb/src/main/: AndroidManifest.xml
shotlamb/src/main/res/layout/: activity_main.xml  activity_main2.xml
shotlamb/src/main/res/values/: strings.xml
testjiagu/: build.gradle
testjiagu/src/main/: AndroidManifest.xml
testjiaguproxy/: build.gradle
testjiaguproxy/src/main/: AndroidManifest.xml
tffmpeg/: CMakeLists.txt  build.gradle
tffmpeg/src/androidTest/java/com/libwuwind/player/: ExampleInstrumentedTest.java
tffmpeg/src/main/: AndroidManifest.xml
tffmpeg/src/main/java/com/libwuwind/: MApplication.java
tffmpeg/src/main/java/com/libwuwind/activity/capture/: PushActivity.java  PushModel.java  PushView.java
tffmpeg/src/main/java/com/libwuwind/activity/launch/: LaunchActivity.java  LaunchModel.java  LaunchView.java
tffmpeg/src/main/java/com/libwuwind/jni/: FFmpegUtils.java  NativePuller.java  NativePusher.java
tffmpeg/src/main/java/com/libwuwind/player/: MainActivity.java  MediaPlayer.java  VideoUtils.java  VideoView.java
tffmpeg/src/main/java/com/libwuwind/push/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
tffmpeg/src/main/java/com/libwuwind/push/param/: AudioParam.java  VideoParam.java
tffmpeg/src/main/java/com/libwuwind/rtmpplayer/: RtmpPlayerActivity.java  RtmpPlayerModel.java  RtmpPlayerView.java
tffmpeg/src/main/java/com/libwuwind/test/: TestActivity.java  TestModel.java  TestView.java
tffmpeg/src/main/jni/: PushStream.c  audio_player.c  dn_audio_player.c  ffmpeg_player.c  m_player.c  m_player0.c  m_thread.c  media_player.c  pull.c  push.c
tffmpeg/src/main/res/layout/: activity_main.xml  activity_push.xml  activity_rtmp_player.xml
tffmpeg/src/main/res/values/: strings.xml
tffmpeg/src/test/java/com/libwuwind/player/: ExampleUnitTest.java
uilibrary/src/main/: AndroidManifest.xml
uilibrary/src/main/res/layout/: drag_sub_view.xml  my_self_view.xml
undercover/: build.gradle
undercover/src/main/: AndroidManifest.xml
undercover/src/main/assets/: litepal.xml  rule.txt
undercover/src/main/res/layout/: activity_edit.xml  (+15 more)
voice/: build.gradle
voice/src/main/: AndroidManifest.xml
(+191 files in other folders)
